-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Beta1
-
None
-
iOS 13.3.1
-
-
242e35e774 (qt/qtbase/dev) 242e35e774 (qt/tqtc-qtbase/dev) 30b27878a1 (qt/qtbase/6.3) 30b27878a1 (qt/tqtc-qtbase/6.3) b58c2c65d1 (qt/qtbase/6.2) b58c2c65d1 (qt/tqtc-qtbase/6.2) b58c2c65d1 (qt/tqtc-qtbase/6.2.4)
Our app was working on an iPhone Xs with iOS 13.3.1 using Qt 6.2.2, while it is not working anymore after updating to Qt 6.3.0-beta1. Both Qt versions installed using Qt Maintenance Tool for MacOS. The updated app is working on devices with iOS 14 and 15.
Here are the relevant lines of the stacktrace:
#1 std::__1::pair<NSString*, Qt::Key>::pair<NSString* const&, Qt::Key, false>(NSString* const&, Qt::Key&&) (in app) (utility:447)
#2 __cxx_global_var_init (in app) (qapplekeymapper.mm:638)
For Gerrit Dashboard: QTBUG-100518 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
394390,2 | Avoid file-static initialization of symbols that need @availability check | dev | qt/qtbase | Status: MERGED | +2 | 0 |
394881,2 | Avoid file-static initialization of symbols that need @availability check | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
394882,2 | Avoid file-static initialization of symbols that need @availability check | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |