Avoid file-static initialization of symbols that need @availability check

Fixes crash in key mapper on iOS < 13.4, where the symbols are not
available.

Fixes: QTBUG-100518
Change-Id: I9bb1a75b17e5f0f50205b757fdb673218d7fb5e0
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit 242e35e774f07a8a3b561acc658cdfeba4c20752)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>